# everything-clone

./: .gitignore  Cargo.toml  README.md  benchmark.txt
src/: cache_file_index.rs  file_indexers.rs  file_metadata.rs  file_searchers.rs  main.rs
