[package]
name = "everything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
rayon = "1.5.1"
serde_json = "1.0.64"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.1"